log
Fri Mar 27 01:39:25 AM UTC 2026: 
 tests:  0|6
total_score: 0/60
1ca26ca
Fri Mar 27 01:45:03 AM UTC 2026: 
 list.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/60
2542d52
Fri Mar 27 01:57:27 AM UTC 2026: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:57:12: error: dereferencing ‘void *’ pointer [-Werror]
   57 |     return *dato;
      |            ^~~~~
list.c:57:12: error: void value not ignored as it ought to be
list.c:58:1: error: control reaches end of non-void function [-Werror=return-type]
   58 | }
      | ^
cc1: all warnings being treated as errors
0286d40
Fri Mar 27 01:57:50 AM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f36de17
